# hitchstory

./: .gitignore  .hitchprojectsync  CHANGELOG.md  MANIFEST.in  PROJECT_NAME  README.md  README.rst  key.sh  pyproject.toml  setup.py
doc/: index.md
docs/: dirtemplate.yml  index.md  recommended-environment.md  recommended-hitchstory-environment.md  setup-with-hitchkey.md
examples/: README.md
hitch/: Dockerfile-hitch  TODO.txt  TODO.yml  abort.story  about.story  arbitrary-number-of-arguments.story  arguments.story  code_that_does_things.py  codetemplates.yml  debugrequirements.txt  docgen.py  docstory.yml  documentation.story  engine.py  envirotest.py  exception-in-special-method.story  fail-fast.story  failure.story  flaky.story  given.story  gradual-typing.story  hitchreqs.in  hitchreqs.txt  inheritance.story  invalid-steps.story  invalid-stories.story  invalid-yaml.story  key.py  metadata.story  multiple.story  no-stories.story  one-story.story  parameterization.story  parameterization.story.invalid  preconditions.story  pyenv.py  pyproject.toml  quickstart.story  rewrite-story-with-bug.todo  rewrite-story.story  (+8 more)
hitchstory/: __init__.py  arguments.py  doc_template.py  docstory.py  engine.py  exceptions.py  failure.py  given.py  matchers.py  result.py  step_method.py  story.py  story_collection.py  story_file.py  story_list.py  story_step.py  utils.py
tests/: README.rst  TODO.txt  abort.test  about.test  all.settings  arbitrary-number-of-arguments.test  ci.settings  code_that_does_things.py  dev_requirements.txt  engine.py  exception-in-special-method.test  (+16 more)
(+457 files in other folders)
