[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hitchstory"]

[project]
name = "hitchstory"
authors = [
    {name = "Colm O'Connor", email = "colm.oconnor.github@gmail.com"},
]
description = "Type-safe YAML-based example specification driven development framework for python."
license = {file = "LICENSE.txt"}
requires-python = ">=3.7.0"
keywords = ["yaml", "hitchdev", "bdd", "tdd", "testing", "tests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: English",
    "Environment :: Console",
]
dependencies = [
    "strictyaml>=1.4.3",
    "path.py>=9.0",
    "jinja2>=2.9",
    "colorama>=0.3.8",
    "python-slugify>=1.2.1",
    "prettystack>=0.3.0",
    "psutil>=5.0.0",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://hitchdev.com/hitchstory"
documentation = "https://hitchdev.com/hitchstory/using"
repository = "https://github.com/hitchdev/hitchstory"
changelog = "https://hitchdev.com/hitchstory/changelog"

[tool.setuptools.dynamic]
readme = {file = ["README.md",], content-type = "text/markdown"}
version = {file = "VERSION"}
